[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features =["derive"] }
reqwest = {version = "0.11.10", features = ["blocking"]}
serde_json = "1.0.79"
rand = "0.8.5"
uptime_lib = "0.2.1"
itertools = "0.10.3"
